# deepl-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DeepL.py  DeepL2.py  Makefile  PROJECT_STRUCTURE.md  README.md  apply_refactoring.sh  deepLCall.py  deepLCall2.py  deepLUi.py  deepLUi.ui  deepLUi2.py  deepLUi2.ui  jobs.dvi  jobs.tex  jobs_jp.txt  kumonoito.txt  push_to_github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  stdinput_test.py  test.txt  tox.ini
.github/workflows/: release.yml  tests.yml
backup_20250704_223506/: __init__.py.bak
examples/: Test Flying the F-35 & Sensor Fusion - PCDU S2E11.srt  basic_usage.py  batch_translation.py
src/deepl_cli/: __init__.py  __main__.py  cli.py  cli.py.bak.20250704_223737  clipboard.py  config.py  py.typed  translator.py  utils.py
tests/: conftest.py  test_cli.py  test_clipboard.py  test_config.py  test_translator.py  test_utils.py
