[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepl-cli"
version = "0.1.0"
description = "A command-line interface for DeepL translation API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["deepl", "translation", "cli", "command-line", "i18n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "deepl>=1.16.1",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.2"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "pre-commit>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/${GITHUB_USERNAME}/deepl-cli"
Repository = "https://github.com/${GITHUB_USERNAME}/deepl-cli.git"
"Bug Tracker" = "https://github.com/${GITHUB_USERNAME}/deepl-cli/issues"

[project.scripts]
deepl-cli = "deepl_cli.cli:main"
deepl = "deepl_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/deepl_cli --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
